Update home.html 11-15-2024-414pm

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <title>Spelling Test</title>
 </head>
 <body>
-    <h1>Spelling Test</h1>
-    <a href="{{ url_for('select_test') }}">Start Test</a>
+    <h1>Welcome to Charger Spelling Test</h1>
+    <a href="{{ url_for('select_test') }}">Go to Select Test</a>
 </body>
 </html>
