Update home.html 11-16-2024s-100pm

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spelling Test</title>
+    <title>Welcome to the Spelling Test</title>
 </head>
 <body>
-    <h1>Welcome to Charger Spelling Test</h1>
-    <a href="{{ url_for('select_test') }}">Go to Select Test</a>
+    <h1>Welcome to the Charger ⚡ Spelling Test</h1>
+
+    <p>Test your spelling skills by selecting a test for each letter of the alphabet!</p>
+
+    <h2>👦What would you like to do?👩</h2>
+    
+    <ul>
+        <li><a href="{{ url_for('select_test') }}">Select Test</a></li>
+        <li><a href="{{ url_for('historical_misspelled_word_list') }}">Historical Misspelled Words</a></li>
+    </ul>
 </body>
 </html>
