Update select_test.html 11-16-2024s-100pm

--- a/templates/select_test.html
+++ b/templates/select_test.html
@@ -6,12 +6,14 @@
     <title>Select Test</title>
 </head>
 <body>
-    <h1>Select Test</h1>
+    <h1>Select a Test</h1>
+    
     <ul>
         {% for letter, words in tests.items() %}
-            <li><a href="{{ url_for('start_test', letter=letter) }}">Test {{ letter.upper() }}</a></li>
+        <li><a href="{{ url_for('start_test', letter=letter) }}">{{ letter.upper() }} Test</a></li>
         {% endfor %}
     </ul>
-    <a href="{{ url_for('home') }}">Back to Main Menu</a>
+    
+    <a href="{{ url_for('home') }}">Home</a>
 </body>
 </html>
