--- a/templates/test.html
+++ b/templates/test.html
@@ -9,7 +9,7 @@
     <h2>Spell the word: {{ current_word }}</h2>
 
     <form method="POST">
-        <input type="text" name="user_input" required placeholder="Your answer">
+        <input type="text" name="user_input" required placeholder="Your answer" required autofocus>
         <input type="hidden" name="correct_word" value="{{ current_word }}">
         <button type="submit">Submit</button>
     </form>
