Update edit_misspelled_word_list.html 11-18-2024-228pm

--- a/templates/edit_misspelled_word_list.html
+++ b/templates/edit_misspelled_word_list.html
@@ -10,7 +10,7 @@
 
     <form method="POST">
         <label for="word">Word:</label>
-        <input type="text" name="word" id="word" required>
+        <input type="text" name="word" id="word" required autofocus>
         <select name="action">
             <option value="add">Add</option>
             <option value="delete">Delete</option>
