Update edit_misspelled_word_list.html 11-20-2024-127pm

--- a/templates/edit_misspelled_word_list.html
+++ b/templates/edit_misspelled_word_list.html
@@ -25,6 +25,7 @@
         {% endfor %}
     </ul>
 
+    <a href="{{ url_for('historical_misspelled_word_list') }}">Back to Misspelled Words</a>
     <a href="{{ url_for('home') }}">Home</a>
 </body>
 </html>
