Update test_complete.html 11-20-2024-130pm

--- a/templates/test_complete.html
+++ b/templates/test_complete.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h2>Test Complete</h2>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=Ytp4Wvua"></script>
     <p>{{ message }}</p>
     <a href="{{ url_for('select_test') }}">Retake Test</a>
     <a href="{{ url_for('home') }}">Home</a>
