--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Welcome to the Charger ⚡ Spelling Test</h1>
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=Ytp4Wvua"></script>
+    <!-- Inject the API key into the script tag -->
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key={{ api_key }}"></script>
     <p>Test your spelling skills by selecting a test for each letter of the alphabet!</p>
 
     <h2>👦What would you like to do?👩</h2>
