Update play_sound.html 11-21-2024-131pm

--- a/templates/play_sound.html
+++ b/templates/play_sound.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Pronunciation of the Word: {{ current_word }}</h2>
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=Ytp4Wvua"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key={{ api_key }}"></script>
     <button onclick="responsiveVoice.speak('{{ current_word }}', 'US English Female')">Pronounce</button>
     <a href="{{ url_for('start_test', letter=request.args.get('letter')) }}">Back to Test</a>
 </body>
