--- a/templates/retest.html
+++ b/templates/retest.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h2>Retake Test</h2>
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=Ytp4Wvua"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key={{ api_key }}"></script>
+    #<script src="https://code.responsivevoice.org/responsivevoice.js?key=Ytp4Wvua"></script>
     <p>Spell the word: {{ current_word }}</p>
 
     <form method="POST">
