--- a/templates/test.html
+++ b/templates/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h2>Spell the word: {{ current_word }}</h2>
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=Ytp4Wvua"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key={{ api_key }}"></script>
+    #<script src="https://code.responsivevoice.org/responsivevoice.js?key=Ytp4Wvua"></script>
     <p>Current Score: {{ scoring_board[letter]['correct'] }} / {{ scoring_board[letter]['total'] }}</p>
     <form method="POST">
         <input type="text" name="user_input" required placeholder="Your answer" required autofocus>
